--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   color: white;
   text-shadow: 2px 2px 4px #000000;
 }
+.project-list{
+  overflow-y: auto;
+  height: 50em;
+  scroll-behavior: smooth;
+}
 
 form{
   padding: 20px;
